--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <input type="number" id="num1" placeholder="Num 1">
         <input type="number" id="num2" placeholder="Num 2">
         <br><br>
-        <button type="button" onclick="addition(); results()">+</button>
-        <button type="button" onclick="subtraction(); results()">-</button>
-        <button type="button" onclick="multiplication(); results()">*</button>
-        <button type="button" onclick="division(); results()">/</button>
-        <button type="button" onclick="modulo(); results()">%</button>
+        <button type="button" onclick="valueXY(); addition(); results()">+</button>
+        <button type="button" onclick="valueXY(); subtraction(); results()">-</button>
+        <button type="button" onclick="valueXY(); multiplication(); results()">*</button>
+        <button type="button" onclick="valueXY(); division(); results()">/</button>
+        <button type="button" onclick="valueXY(); modulo(); results()">%</button>
         <p id="results">Results will be displayed here.</p>
     </div>
     <script src="script.js"></script>
